--- a/index.html
+++ b/index.html
@@ -13,34 +13,64 @@
 
 <body>
     <!-- NavBar -->
-    <div class="container">
-        <header>
-            <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-                <a class="navbar-brand" href="#">Jake Burzlaff</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav">
-                        <li class="nav-item active">
-                            <a class="nav-link" href="./index.html">Home <span class="sr-only">(current)</span></a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="./portfolio.html">Portfolio</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="./contact.html">Contact</a>
-                        </li>
-                    </ul>
-                </div>
-            </nav>
-        </header>
+    <header>
+        <nav class="navbar navbar-expand-sm navbar-dark bg-primary">
+            <a class="navbar-brand">Jake Burzlaff</a>
+            <!-- collapsing navigation to dropdown list -->
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <!-- list of links -->
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="./index.html">Home <span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./portfolio.html">Portfolio</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./contact.html">Contact</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+    </header>
 
-        <main>
-            <h1>HOME PAGE</h1>
-        </main>
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-12">
+                <div class="jumbotron jumbotron-fluid">
+                    <div class="container">
+                        <h1 class="display-4">Hi there!</h1>
+                        <p class="lead">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Pariatur beatae,
+                            exercitationem quia facilis assumenda iure! Possimus consequuntur quibusdam ut magni rerum
+                            dolorem sint, officiis accusantium culpa beatae dignissimos expedita eaque!</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-sm-4">
+                <div class="card">
+                    <div class="card-body">
+                        <img src="https://via.placeholder.com/200" alt="placeholder image">
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-8">
+                <div class="row">
+                    <h3>About Me</h3>
+                </div>
+                <div class="row d-flex justify-content-sm-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure sint voluptatem, nemo,
+                    neque expedita voluptatibus illum harum odio et modi, cumque quisquam explicabo pariatur nobis
+                    eligendi nulla illo aspernatur. Distinctio.</div>
+            </div>
+        </div>
+
     </div>
+
     <!-- Bootstrap javascript -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
