--- a/portfolio.html
+++ b/portfolio.html
@@ -38,25 +38,48 @@
         </nav>
     </header>
 
-    <!-- <div class="container">
-        <div class="row">
-            <div class="col-sm-4">
-                <h3>
-                    <p>HTML</p>
-                </h3>
-            </div>
-            <div class="col-sm-4">
-                <h3>
-                    <p>CSS</p>
-                </h3>
-            </div>
-            <div class="col-sm-4">
-                <h3>
-                    <p>Javascript</p>
-                </h3>
+    <div class="container">
+        <div class="row mt-5">
+            <div class="col-sm-12 d-sm-flex justify-content-center">
+                <p>Here are some projects I've been working on recently:</p>
             </div>
         </div>
-    </div> -->
+        <!-- <div class="row mt-2">
+            <div class="col-sm-4 d-sm-flex justify-content-center">
+                <p>HTML</p>
+            </div>
+            <div class="col-sm-4 d-sm-flex justify-content-center">
+                <p>CSS</p>
+            </div>
+            <div class="col-sm-4 d-sm-flex justify-content-center">
+                <p>Javascript</p>
+            </div>
+        </div> -->
+        <div class="row mb-4">
+            <div class="col-sm-4 d-sm-flex justify-content-center align-items-center">
+                <img src="https://via.placeholder.com/200" class="img-flud img-thumbnail" alt="placeholder image">
+            </div>
+            <div class="col-sm-4 d-sm-flex justify-content-center align-items-center">
+                <img src="https://via.placeholder.com/200" class="img-flud img-thumbnail" alt="placeholder image">
+            </div>
+            <div class="col-sm-4 d-sm-flex justify-content-center align-items-center">
+                <img src="https://via.placeholder.com/200" class="img-flud img-thumbnail" alt="placeholder image">
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-sm-4 d-sm-flex justify-content-center align-items-center">
+                <img src="https://via.placeholder.com/200" class="img-flud img-thumbnail" alt="placeholder image">
+            </div>
+            <div class="col-sm-4 d-sm-flex justify-content-center align-items-center">
+                <img src="https://via.placeholder.com/200" class="img-flud img-thumbnail" alt="placeholder image">
+            </div>
+            <div class="col-sm-4 d-sm-flex justify-content-center align-items-center">
+                <img src="https://via.placeholder.com/200" class="img-flud img-thumbnail" alt="placeholder image">
+            </div>
+        </div>
+
+    </div>
 
     <!-- Bootstrap javascript -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
