update img formatting to be responsive on index.html

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <div class="container">
         <div class="row">
             <div class="col-sm-12">
-                <div class="jumbotron jumbotron-fluid">
+                <div class="jumbotron jumbotron-fluid mt-5">
                     <div class="container">
                         <h1 class="display-4">Hi there!</h1>
                         <p class="lead">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Pariatur beatae,
@@ -52,18 +52,15 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-sm-4">
-                <div class="card">
-                    <div class="card-body">
-                        <img src="https://via.placeholder.com/200" alt="placeholder image">
-                    </div>
-                </div>
+            <div class="col-sm-4 d-sm-flex justify-content-center align-items-center">
+                <img src="https://via.placeholder.com/200" class="img-flud img-thumbnail" alt="placeholder image">
             </div>
             <div class="col-sm-8">
                 <div class="row">
                     <h3>About Me</h3>
                 </div>
-                <div class="row d-flex justify-content-sm-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure sint voluptatem, nemo,
+                <div class="row d-flex justify-content-sm-center">Lorem ipsum dolor sit amet consectetur adipisicing
+                    elit. Iure sint voluptatem, nemo,
                     neque expedita voluptatibus illum harum odio et modi, cumque quisquam explicabo pariatur nobis
                     eligendi nulla illo aspernatur. Distinctio.</div>
             </div>
