--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
         </div>
         <div class="row">
             <div class="col-sm-4 d-sm-flex justify-content-center align-items-center">
-                <img src="https://via.placeholder.com/200" class="img-flud img-thumbnail" alt="placeholder image">
+                <img src="https://via.placeholder.com/200" class="img-flud img-thumbnail border-primary rounded" alt="placeholder image">
             </div>
             <div class="col-sm-8">
-                <div class="row">
+                <div class="row text-primary">
                     <h3>About Me</h3>
                 </div>
                 <div class="row d-flex justify-content-sm-center">Lorem ipsum dolor sit amet consectetur adipisicing
