--- a/portfolio.html
+++ b/portfolio.html
@@ -57,25 +57,25 @@
         </div> -->
         <div class="row mb-4">
             <div class="col-sm-4 d-sm-flex justify-content-center align-items-center">
-                <img src="https://via.placeholder.com/200" class="img-flud img-thumbnail" alt="placeholder image">
+                <img src="https://via.placeholder.com/200" class="img-flud img-thumbnail border-primary rounded" alt="placeholder image">
             </div>
             <div class="col-sm-4 d-sm-flex justify-content-center align-items-center">
-                <img src="https://via.placeholder.com/200" class="img-flud img-thumbnail" alt="placeholder image">
+                <img src="https://via.placeholder.com/200" class="img-flud img-thumbnail border-primary rounded" alt="placeholder image">
             </div>
             <div class="col-sm-4 d-sm-flex justify-content-center align-items-center">
-                <img src="https://via.placeholder.com/200" class="img-flud img-thumbnail" alt="placeholder image">
+                <img src="https://via.placeholder.com/200" class="img-flud img-thumbnail border-primary rounded" alt="placeholder image">
             </div>
         </div>
 
         <div class="row">
             <div class="col-sm-4 d-sm-flex justify-content-center align-items-center">
-                <img src="https://via.placeholder.com/200" class="img-flud img-thumbnail" alt="placeholder image">
+                <img src="https://via.placeholder.com/200" class="img-flud img-thumbnail border-primary rounded" alt="placeholder image">
             </div>
             <div class="col-sm-4 d-sm-flex justify-content-center align-items-center">
-                <img src="https://via.placeholder.com/200" class="img-flud img-thumbnail" alt="placeholder image">
+                <img src="https://via.placeholder.com/200" class="img-flud img-thumbnail border-primary rounded" alt="placeholder image">
             </div>
             <div class="col-sm-4 d-sm-flex justify-content-center align-items-center">
-                <img src="https://via.placeholder.com/200" class="img-flud img-thumbnail" alt="placeholder image">
+                <img src="https://via.placeholder.com/200" class="img-flud img-thumbnail border-primary rounded" alt="placeholder image">
             </div>
         </div>
 
