update contact.html layout

--- a/index.html
+++ b/index.html
@@ -44,16 +44,16 @@
                 <div class="jumbotron jumbotron-fluid mt-5">
                     <div class="container">
                         <h1 class="display-4">Hi there!</h1>
-                        <p class="lead">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Pariatur beatae,
-                            exercitationem quia facilis assumenda iure! Possimus consequuntur quibusdam ut magni rerum
-                            dolorem sint, officiis accusantium culpa beatae dignissimos expedita eaque!</p>
+                        <p class="lead">My name is Jake Burzlaff and I am a full stack web developer. I hope you enjoy
+                            looking around on my website.</p>
                     </div>
                 </div>
             </div>
         </div>
         <div class="row">
             <div class="col-sm-4 d-sm-flex justify-content-center align-items-center">
-                <img src="https://via.placeholder.com/200" class="img-flud img-thumbnail border-primary rounded" alt="placeholder image">
+                <img src="https://via.placeholder.com/200" class="img-flud img-thumbnail border-primary rounded"
+                    alt="placeholder image">
             </div>
             <div class="col-sm-8">
                 <div class="row text-primary">
