--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
     <!-- Bootstrap style sheet -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-
+    <script src="https://kit.fontawesome.com/c17095877c.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -38,9 +38,26 @@
         </nav>
     </header>
 
-    <main>
-        <h1>CONTACT PAGE</h1>
-    </main>
+    <div class="container">
+        <div class="row mt-5 text-primary">
+            <h1>Contact Info</h1>
+        </div>
+        <div class="row">
+            <p>
+                Find me on social media!
+            </p>
+        </div>
+        <div class="row">
+            <div class="col-sm-1 d-flex justify-content-center">
+                <i class="fab fa-linkedin" style="font-size: 24px; color: #0376A8"></i>
+                <a href="https://www.linkedin.com/in/jake-burzlaff-4b03a0b5/" target="_blank">LinkedIn</a>
+            </div>
+            <div class="col-sm-1 d-flex justify-content-center">
+                <i class="fab fa-github" style="font-size: 24px" href="https://github.com/jburz/jburz.github.io"></i>
+                <a href="https://github.com/jburz/jburz.github.io" target="_blank">GitHub</a>
+            </div>
+        </div>
+    </div>
 
     <!-- Bootstrap javascript -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
