--- a/portfolio.html
+++ b/portfolio.html
@@ -44,38 +44,33 @@
                 <p>Here are some projects I've been working on recently:</p>
             </div>
         </div>
-        <!-- <div class="row mt-2">
-            <div class="col-sm-4 d-sm-flex justify-content-center">
-                <p>HTML</p>
-            </div>
-            <div class="col-sm-4 d-sm-flex justify-content-center">
-                <p>CSS</p>
-            </div>
-            <div class="col-sm-4 d-sm-flex justify-content-center">
-                <p>Javascript</p>
-            </div>
-        </div> -->
         <div class="row mb-4">
             <div class="col-sm-4 d-sm-flex justify-content-center align-items-center">
-                <img src="https://via.placeholder.com/200" class="img-flud img-thumbnail border-primary rounded" alt="placeholder image">
+                <img src="https://via.placeholder.com/200" class="img-flud img-thumbnail border-primary rounded"
+                    alt="placeholder image">
             </div>
             <div class="col-sm-4 d-sm-flex justify-content-center align-items-center">
-                <img src="https://via.placeholder.com/200" class="img-flud img-thumbnail border-primary rounded" alt="placeholder image">
+                <img src="https://via.placeholder.com/200" class="img-flud img-thumbnail border-primary rounded"
+                    alt="placeholder image">
             </div>
             <div class="col-sm-4 d-sm-flex justify-content-center align-items-center">
-                <img src="https://via.placeholder.com/200" class="img-flud img-thumbnail border-primary rounded" alt="placeholder image">
+                <img src="https://via.placeholder.com/200" class="img-flud img-thumbnail border-primary rounded"
+                    alt="placeholder image">
             </div>
         </div>
 
         <div class="row">
             <div class="col-sm-4 d-sm-flex justify-content-center align-items-center">
-                <img src="https://via.placeholder.com/200" class="img-flud img-thumbnail border-primary rounded" alt="placeholder image">
+                <img src="https://via.placeholder.com/200" class="img-flud img-thumbnail border-primary rounded"
+                    alt="placeholder image">
             </div>
             <div class="col-sm-4 d-sm-flex justify-content-center align-items-center">
-                <img src="https://via.placeholder.com/200" class="img-flud img-thumbnail border-primary rounded" alt="placeholder image">
+                <img src="https://via.placeholder.com/200" class="img-flud img-thumbnail border-primary rounded"
+                    alt="placeholder image">
             </div>
             <div class="col-sm-4 d-sm-flex justify-content-center align-items-center">
-                <img src="https://via.placeholder.com/200" class="img-flud img-thumbnail border-primary rounded" alt="placeholder image">
+                <img src="https://via.placeholder.com/200" class="img-flud img-thumbnail border-primary rounded"
+                    alt="placeholder image">
             </div>
         </div>
 
