--- a/contact.html
+++ b/contact.html
@@ -53,7 +53,7 @@
                 <a href="https://www.linkedin.com/in/jake-burzlaff-4b03a0b5/" target="_blank">LinkedIn</a>
             </div>
             <div class="col-sm-1 d-flex justify-content-center">
-                <i class="fab fa-github" style="font-size: 24px" href="https://github.com/jburz/jburz.github.io"></i>
+                <i class="fab fa-github" style="font-size: 24px"></i>
                 <a href="https://github.com/jburz/jburz.github.io" target="_blank">GitHub</a>
             </div>
         </div>
