added assets folder and replaced placeholder images

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <div class="col-sm-12">
                 <div class="jumbotron jumbotron-fluid mt-5">
                     <div class="container">
-                        <h1 class="display-4">Hi there!</h1>
+                        <h1 class="display-4">Oh hey there!</h1>
                         <p class="lead">My name is Jake Burzlaff and I am a full stack web developer. I hope you enjoy
                             looking around on my website.</p>
                     </div>
@@ -52,7 +52,7 @@
         </div>
         <div class="row">
             <div class="col-sm-4 d-sm-flex justify-content-center align-items-center">
-                <img src="https://via.placeholder.com/200" class="img-flud img-thumbnail border-primary rounded"
+                <img src="./assets/headshot.jpg" class="img-flud img-thumbnail border-primary rounded"
                     alt="placeholder image">
             </div>
             <div class="col-sm-8">
