added semantic elements

--- a/index.html
+++ b/index.html
@@ -38,35 +38,52 @@
         </nav>
     </header>
 
+
     <div class="container">
-        <div class="row">
-            <div class="col-sm-12">
-                <div class="jumbotron jumbotron-fluid mt-5">
-                    <div class="container">
-                        <h1 class="display-4">Oh hey there!</h1>
-                        <p class="lead">My name is Jake Burzlaff and I am a full stack web developer. I hope you enjoy
-                            looking around on my website.</p>
+        <main>
+            <div class="row">
+                <div class="col-sm-12">
+                    <div class="jumbotron jumbotron-fluid mt-5">
+                        <div class="container">
+                            <h1 class="display-4">Oh hey there!</h1>
+                            <p class="lead">My name is Jake Burzlaff and I am a full stack web developer. I hope you
+                                enjoy
+                                looking around on my website.</p>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="row">
-            <div class="col-sm-4 d-sm-flex justify-content-center align-items-center">
-                <img src="./assets/headshot.jpg" class="img-flud img-thumbnail border-primary rounded"
-                    alt="placeholder image">
-            </div>
-            <div class="col-sm-8">
-                <div class="row text-primary">
-                    <h3>About Me</h3>
+            <div class="row">
+                <div class="col-sm-4 d-sm-flex justify-content-center align-items-center">
+                    <img src="./assets/headshot.jpg" class="img-flud img-thumbnail border-primary rounded"
+                        alt="placeholder image">
                 </div>
-                <div class="row d-flex justify-content-sm-center">Lorem ipsum dolor sit amet consectetur adipisicing
-                    elit. Iure sint voluptatem, nemo,
-                    neque expedita voluptatibus illum harum odio et modi, cumque quisquam explicabo pariatur nobis
-                    eligendi nulla illo aspernatur. Distinctio.</div>
+                <div class="col-sm-8">
+                    <div class="row text-primary">
+                        <h3>About Me</h3>
+                    </div>
+                    <div class="row d-flex justify-content-sm-center">
+                        <p>
+                            I grew up in the suburbs of Chicago and love everything Chicago related. Give me some
+                            italian
+                            beef, deep dish pizza and throw a little Cubbies on top.
+                        </p>
+                        <p>
+                            I moved to Logan, UT to attend USU
+                            about 11 years ago. I love the area! The access to the mountains and everything outdoors is
+                            unbeatable!
+                        </p>
+                        <p>
+                            I love to mountain bike, go on hikes and spend time with my wife and two kids. If I can do
+                            it
+                            all at once, I have hit the dream!
+                        </p>
+                    </div>
+                </div>
             </div>
-        </div>
-
+        </main>
     </div>
+
 
     <!-- Bootstrap javascript -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
