--- a/contact.html
+++ b/contact.html
@@ -39,24 +39,26 @@
     </header>
 
     <div class="container">
-        <div class="row mt-5 text-primary">
-            <h1>Contact Info</h1>
-        </div>
-        <div class="row">
-            <p>
-                Find me on social media!
-            </p>
-        </div>
-        <div class="row">
-            <div class="col-sm-1 d-flex justify-content-center">
-                <i class="fab fa-linkedin" style="font-size: 24px; color: #0376A8"></i>
-                <a href="https://www.linkedin.com/in/jake-burzlaff-4b03a0b5/" target="_blank">LinkedIn</a>
+        <main>
+            <div class="row mt-5 text-primary">
+                <h1>Contact Info</h1>
             </div>
-            <div class="col-sm-1 d-flex justify-content-center">
-                <i class="fab fa-github" style="font-size: 24px"></i>
-                <a href="https://github.com/jburz/jburz.github.io" target="_blank">GitHub</a>
+            <div class="row">
+                <p>
+                    Find me on social media!
+                </p>
             </div>
-        </div>
+            <div class="row">
+                <div class="col-sm-1 d-flex justify-content-center">
+                    <i class="fab fa-linkedin" style="font-size: 24px; color: #0376A8"></i>
+                    <a href="https://www.linkedin.com/in/jake-burzlaff-4b03a0b5/" target="_blank">LinkedIn</a>
+                </div>
+                <div class="col-sm-1 d-flex justify-content-center">
+                    <i class="fab fa-github" style="font-size: 24px"></i>
+                    <a href="https://github.com/jburz/jburz.github.io" target="_blank">GitHub</a>
+                </div>
+            </div>
+        </main>
     </div>
 
     <!-- Bootstrap javascript -->
