--- a/portfolio.html
+++ b/portfolio.html
@@ -39,41 +39,42 @@
     </header>
 
     <div class="container">
-        <div class="row mt-5">
-            <div class="col-sm-12 d-sm-flex justify-content-center">
-                <p>Here are some projects I've been working on recently:</p>
+        <main>
+            <div class="row mt-5">
+                <div class="col-sm-12 d-sm-flex justify-content-center">
+                    <p>Here are some projects I've been working on recently:</p>
+                </div>
             </div>
-        </div>
-        <div class="row mb-4">
-            <div class="col-sm-4 d-sm-flex justify-content-center align-items-center">
-                <img src="./assets/20200426_113923.jpg" class="img-flud img-thumbnail border-primary rounded"
-                    alt="placeholder image">
+            <div class="row mb-4">
+                <div class="col-sm-4 d-sm-flex justify-content-center align-items-center">
+                    <img src="./assets/20200426_113923.jpg" class="img-flud img-thumbnail border-primary rounded"
+                        alt="placeholder image">
+                </div>
+                <div class="col-sm-4 d-sm-flex justify-content-center align-items-center">
+                    <img src="./assets/20200613_075016.jpg" class="img-flud img-thumbnail border-primary rounded"
+                        alt="placeholder image">
+                </div>
+                <div class="col-sm-4 d-sm-flex justify-content-center align-items-center">
+                    <img src="./assets/20200614_113237.jpg" class="img-flud img-thumbnail border-primary rounded"
+                        alt="placeholder image">
+                </div>
             </div>
-            <div class="col-sm-4 d-sm-flex justify-content-center align-items-center">
-                <img src="./assets/20200613_075016.jpg" class="img-flud img-thumbnail border-primary rounded"
-                    alt="placeholder image">
-            </div>
-            <div class="col-sm-4 d-sm-flex justify-content-center align-items-center">
-                <img src="./assets/20200614_113237.jpg" class="img-flud img-thumbnail border-primary rounded"
-                    alt="placeholder image">
-            </div>
-        </div>
 
-        <div class="row">
-            <div class="col-sm-4 d-sm-flex justify-content-center align-items-center">
-                <img src="./assets/20200614_120203.jpg" class="img-flud img-thumbnail border-primary rounded"
-                    alt="placeholder image">
+            <div class="row">
+                <div class="col-sm-4 d-sm-flex justify-content-center align-items-center">
+                    <img src="./assets/20200614_120203.jpg" class="img-flud img-thumbnail border-primary rounded"
+                        alt="placeholder image">
+                </div>
+                <div class="col-sm-4 d-sm-flex justify-content-center align-items-center">
+                    <img src="./assets/20200620_065117.jpg" class="img-flud img-thumbnail border-primary rounded"
+                        alt="placeholder image">
+                </div>
+                <div class="col-sm-4 d-sm-flex justify-content-center align-items-center">
+                    <img src="./assets/20200621_164046.jpg" class="img-flud img-thumbnail border-primary rounded"
+                        alt="placeholder image">
+                </div>
             </div>
-            <div class="col-sm-4 d-sm-flex justify-content-center align-items-center">
-                <img src="./assets/20200620_065117.jpg" class="img-flud img-thumbnail border-primary rounded"
-                    alt="placeholder image">
-            </div>
-            <div class="col-sm-4 d-sm-flex justify-content-center align-items-center">
-                <img src="./assets/20200621_164046.jpg" class="img-flud img-thumbnail border-primary rounded"
-                    alt="placeholder image">
-            </div>
-        </div>
-
+        </main>
     </div>
 
     <!-- Bootstrap javascript -->
