--- a/contact.html
+++ b/contact.html
@@ -55,7 +55,7 @@
                 </div>
                 <div class="col-sm-1 d-flex justify-content-center">
                     <i class="fab fa-github" style="font-size: 24px"></i>
-                    <a href="https://github.com/jburz/jburz.github.io" target="_blank">GitHub</a>
+                    <a href="https://github.com/jburz/" target="_blank">GitHub</a>
                 </div>
             </div>
         </main>
