added cards for each project with picture description and links to github repo and deployed site, added phone number and email to contact page

--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <!-- Bootstrap style sheet -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-
 </head>
 
 <body>
@@ -41,7 +40,7 @@
 
     <div class="container">
         <main>
-            <div class="row">
+            <!-- <div class="row">
                 <div class="col-sm-12">
                     <div class="jumbotron jumbotron-fluid mt-5">
                         <div class="container">
@@ -52,7 +51,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div> -->
             <div class="row">
                 <div class="col-sm-4 d-sm-flex justify-content-center align-items-center">
                     <img src="./assets/headshot.jpg" class="img-flud img-thumbnail border-primary rounded"
