--- a/portfolio.html
+++ b/portfolio.html
@@ -4,11 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Portfolio</title>
+    <title>Jake Burzlaff</title>
     <!-- Bootstrap style sheet -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-
 </head>
 
 <body>
@@ -40,40 +39,97 @@
 
     <div class="container">
         <main>
-            <div class="row mt-5">
-                <div class="col-sm-12 d-sm-flex justify-content-center">
-                    <p>Here are some projects I've been working on recently:</p>
-                </div>
-            </div>
-            <div class="row mb-4">
+
+
+            <div class="row mt-3 mb-4">
                 <div class="col-sm-4 d-sm-flex justify-content-center align-items-center">
-                    <img src="./assets/20200426_113923.jpg" class="img-flud img-thumbnail border-primary rounded"
-                        alt="placeholder image">
+                    <div class="card" style="width: 18rem;">
+                        <img src="./assets/EMG.png" class="img-fluid img-thumbnail border-primary rounded" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Emotional Media Generator</h5>
+                            <p class="card-text">Generate photos or gifs based on how you are feeling.</p>
+                            <a href="https://github.com/clarissareeve/Emotional_Media_Generator" target="_blank"
+                                class="btn btn-primary">Github</a>
+                            <a href="https://clarissareeve.github.io/Emotional_Media_Generator/" target="_blank"
+                                class="btn btn-primary">Deployed Site</a>
+                        </div>
+                    </div>
                 </div>
                 <div class="col-sm-4 d-sm-flex justify-content-center align-items-center">
-                    <img src="./assets/20200613_075016.jpg" class="img-flud img-thumbnail border-primary rounded"
-                        alt="placeholder image">
+                    <div class="card" style="width: 18rem;">
+                        <img src="./assets/Invitr.png" class="img-fluid img-thumbnail border-primary rounded" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Invitr</h5>
+                            <p class="card-text">Wedding invitation app used to track guests, their contact info and
+                                food preferences.</p>
+                            <a href="https://github.com/jburz/Invitr" target="_blank" class="btn btn-primary">Github</a>
+                            <a href="https://scary-cat-18885.herokuapp.com/" target="_blank"
+                                class="btn btn-primary">Deployed Site</a>
+                        </div>
+                    </div>
                 </div>
                 <div class="col-sm-4 d-sm-flex justify-content-center align-items-center">
-                    <img src="./assets/20200614_113237.jpg" class="img-flud img-thumbnail border-primary rounded"
-                        alt="placeholder image">
+                    <div class="card" style="width: 18rem;">
+                        <img src="./assets/getchaBurgers.png" class="img-fluid img-thumbnail border-primary rounded"
+                            alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Getcha Burgers</h5>
+                            <p class="card-text">Add burgers you would like to eat. Once eaten, displays in eaten list.
+                            </p>
+                            <a href="https://github.com/jburz/burger-tracker" target="_blank"
+                                class="btn btn-primary">Github</a>
+                            <a href="https://nameless-reef-29910.herokuapp.com/" target="_blank"
+                                class="btn btn-primary">Deployed Site</a>
+                        </div>
+                    </div>
                 </div>
             </div>
 
-            <div class="row">
+            <div class="row mb-4">
                 <div class="col-sm-4 d-sm-flex justify-content-center align-items-center">
-                    <img src="./assets/20200614_120203.jpg" class="img-flud img-thumbnail border-primary rounded"
-                        alt="placeholder image">
+                    <div class="card" style="width: 18rem;">
+                        <img src="./assets/readmeSample.png" class="img-fluid img-thumbnail border-primary rounded"
+                            alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Readme Generator</h5>
+                            <p class="card-text">CLI app that with prompt questions and generate a good quality readme
+                                based on the responses.</p>
+                            <a href="https://github.com/jburz/readme-generator" target="_blank"
+                                class="btn btn-primary">Github</a>
+                            <a href="" target="_blank" class="btn btn-primary">Deployed Site</a>
+                        </div>
+                    </div>
                 </div>
                 <div class="col-sm-4 d-sm-flex justify-content-center align-items-center">
-                    <img src="./assets/20200620_065117.jpg" class="img-flud img-thumbnail border-primary rounded"
-                        alt="placeholder image">
+                    <div class="card" style="width: 18rem;">
+                        <img src="./assets/fitnessTracker.png" class="img-fluid img-thumbnail border-primary rounded"
+                            alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Fitness Tracker</h5>
+                            <p class="card-text">A workout app to track cardio and resistance based workout routines.
+                            </p>
+                            <a href="https://github.com/jburz/track-my-workouts" target="_blank"
+                                class="btn btn-primary">Github</a>
+                            <a href="https://salty-headland-79788.herokuapp.com/" target="_blank"
+                                class="btn btn-primary">Deployed Site</a>
+                        </div>
+                    </div>
                 </div>
                 <div class="col-sm-4 d-sm-flex justify-content-center align-items-center">
-                    <img src="./assets/20200621_164046.jpg" class="img-flud img-thumbnail border-primary rounded"
-                        alt="placeholder image">
+                    <div class="card" style="width: 18rem;">
+                        <img src="./assets/employeeDirectory.gif" class="img-fluid img-thumbnail border-primary rounded"
+                            alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Employee Directory</h5>
+                            <p class="card-text">CLI app to track employees, managers departments and salaries.</p>
+                            <a href="https://github.com/jburz/employee-directory" target="_blank"
+                                class="btn btn-primary">Github</a>
+                            <a href="" target="_blank" class="btn btn-primary">Deployed Site</a>
+                        </div>
+                    </div>
                 </div>
             </div>
+
         </main>
     </div>
 
