--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Contact</title>
+    <title>Jake Burzlaff</title>
     <!-- Bootstrap style sheet -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
@@ -49,13 +49,21 @@
                 </p>
             </div>
             <div class="row">
-                <div class="col-sm-1 d-flex justify-content-center">
+                <div class="col-sm-2 d-flex justify-content-center">
                     <i class="fab fa-linkedin" style="font-size: 24px; color: #0376A8"></i>
                     <a href="https://www.linkedin.com/in/jake-burzlaff-4b03a0b5/" target="_blank">LinkedIn</a>
                 </div>
-                <div class="col-sm-1 d-flex justify-content-center">
+                <div class="col-sm-2 d-flex justify-content-center">
                     <i class="fab fa-github" style="font-size: 24px"></i>
                     <a href="https://github.com/jburz/" target="_blank">GitHub</a>
+                </div>
+                <div class="col-sm-3 d-flex justify-content-center">
+                    <i class="fas fa-phone" style="font-size: 24px; color: #0376A8"></i>
+                    <span>(630) 809-8335</span>
+                </div>
+                <div class="col-sm-3 d-flex justify-content-center">
+                    <i class="fas fa-envelope" style="font-size: 24px"></i>
+                    <span>jake.bilbao.04.06@gmail.com</span>
                 </div>
             </div>
         </main>
