added style.css with some styling for the portfolio page

--- a/portfolio.html
+++ b/portfolio.html
@@ -10,11 +10,11 @@
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 </head>
 
-<body>
+<body style="background-color: #242582">
     <!-- NavBar -->
     <header>
-        <nav class="navbar navbar-expand-sm navbar-dark bg-primary">
-            <a class="navbar-brand">Jake Burzlaff</a>
+        <nav class="navbar navbar-expand-sm navbar-dark" style="background-color: #2F2FA2">
+            <a class="navbar-brand" style="color: #F64C72">Jake Burzlaff</a>
             <!-- collapsing navigation to dropdown list -->
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -27,7 +27,7 @@
                         <a class="nav-link" href="./index.html">Home <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item active">
-                        <a class="nav-link" href="./portfolio.html">Portfolio</a>
+                        <a class="nav-link" href="./portfolio.html" style="color: #F64C72">Portfolio</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="./contact.html">Contact</a>
@@ -44,14 +44,15 @@
             <div class="row mt-3 mb-4">
                 <div class="col-sm-4 d-sm-flex justify-content-center align-items-center">
                     <div class="card" style="width: 18rem;">
-                        <img src="./assets/EMG.png" class="img-fluid img-thumbnail border-primary rounded" alt="...">
+                        <img src="./assets/EMG.png" class="img-fluid img-thumbnail rounded"
+                            style="border-color: #F64C72" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Emotional Media Generator</h5>
                             <p class="card-text">Generate photos or gifs based on how you are feeling.</p>
                             <a href="https://github.com/clarissareeve/Emotional_Media_Generator" target="_blank"
-                                class="btn btn-primary">Github</a>
+                                class="btn" style="background-color: #F64C72">Github</a>
                             <a href="https://clarissareeve.github.io/Emotional_Media_Generator/" target="_blank"
-                                class="btn btn-primary">Deployed Site</a>
+                                class="btn" style="background-color: #F64C72">Deployed Site</a>
                         </div>
                     </div>
                 </div>
@@ -92,7 +93,7 @@
                             alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Readme Generator</h5>
-                            <p class="card-text">CLI app that with prompt questions and generate a good quality readme
+                            <p class="card-text">CLI app that will prompt questions and generate a good quality readme
                                 based on the responses.</p>
                             <a href="https://github.com/jburz/readme-generator" target="_blank"
                                 class="btn btn-primary">Github</a>
