added new background color, navbar color and text color for personalized styling

--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
     <!-- Bootstrap style sheet -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
 </head>
 
-<body>
+<body class="body-color">
     <!-- NavBar -->
     <header>
-        <nav class="navbar navbar-expand-sm navbar-dark bg-primary">
+        <nav class="navbar navbar-expand-sm navbar-dark btn-style">
             <a class="navbar-brand">Jake Burzlaff</a>
             <!-- collapsing navigation to dropdown list -->
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
@@ -21,10 +22,10 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <!-- list of links -->
-            <div class="collapse navbar-collapse" id="navbarNav">
+            <div class="collapse navbar-collapse " id="navbarNav">
                 <ul class="navbar-nav">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="./index.html">Home <span class="sr-only">(current)</span></a>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="./index.html">Home <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="./portfolio.html">Portfolio</a>
@@ -40,18 +41,6 @@
 
     <div class="container">
         <main>
-            <!-- <div class="row">
-                <div class="col-sm-12">
-                    <div class="jumbotron jumbotron-fluid mt-5">
-                        <div class="container">
-                            <h1 class="display-4">Oh hey there!</h1>
-                            <p class="lead">My name is Jake Burzlaff and I am a full stack web developer. I hope you
-                                enjoy
-                                looking around on my website.</p>
-                        </div>
-                    </div>
-                </div>
-            </div> -->
             <div class="row">
                 <div class="col-sm-4 d-sm-flex justify-content-center align-items-center">
                     <img src="./assets/headshot.jpg" class="img-flud img-thumbnail border-primary rounded"
