--- a/contact.html
+++ b/contact.html
@@ -9,12 +9,13 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/c17095877c.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="style.css">
 </head>
 
-<body>
+<body class="body-color">
     <!-- NavBar -->
     <header>
-        <nav class="navbar navbar-expand-sm navbar-dark bg-primary">
+        <nav class="navbar navbar-expand-sm navbar-dark btn-style">
             <a class="navbar-brand">Jake Burzlaff</a>
             <!-- collapsing navigation to dropdown list -->
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
