added border to home image, color to favicons on contact page, changed text color to white on both pages

--- a/index.html
+++ b/index.html
@@ -41,16 +41,15 @@
 
     <div class="container">
         <main>
-            <div class="row">
+            <div class="row mt-5">
                 <div class="col-sm-4 d-sm-flex justify-content-center align-items-center">
-                    <img src="./assets/headshot.jpg" class="img-flud img-thumbnail border-primary rounded"
-                        alt="placeholder image">
+                    <img src="./assets/headshot.jpg" class="img-flud img-thumbnail card-border" alt="placeholder image">
                 </div>
                 <div class="col-sm-8">
-                    <div class="row text-primary">
+                    <div class="row text-light">
                         <h3>About Me</h3>
                     </div>
-                    <div class="row d-flex justify-content-sm-center">
+                    <div class="row d-flex justify-content-sm-center text-light">
                         <p>
                             I grew up in the suburbs of Chicago and love everything Chicago related. Give me some
                             italian
