--- a/contact.html
+++ b/contact.html
@@ -41,29 +41,29 @@
 
     <div class="container">
         <main>
-            <div class="row mt-5 text-primary">
+            <div class="row mt-5 text-light">
                 <h1>Contact Info</h1>
             </div>
-            <div class="row">
+            <div class="row text-light">
                 <p>
                     Find me on social media!
                 </p>
             </div>
             <div class="row">
                 <div class="col-sm-2 d-flex justify-content-center">
-                    <i class="fab fa-linkedin" style="font-size: 24px; color: #0376A8"></i>
+                    <i class="fab fa-linkedin" style="font-size: 24px; color: #387a47"></i>
                     <a href="https://www.linkedin.com/in/jake-burzlaff-4b03a0b5/" target="_blank">LinkedIn</a>
                 </div>
                 <div class="col-sm-2 d-flex justify-content-center">
-                    <i class="fab fa-github" style="font-size: 24px"></i>
+                    <i class="fab fa-github" style="font-size: 24px; color: #387a47"></i>
                     <a href="https://github.com/jburz/" target="_blank">GitHub</a>
                 </div>
                 <div class="col-sm-3 d-flex justify-content-center">
-                    <i class="fas fa-phone" style="font-size: 24px; color: #0376A8"></i>
+                    <i class="fas fa-phone" style="font-size: 24px; color: #387a47"></i>
                     <span>(630) 809-8335</span>
                 </div>
                 <div class="col-sm-3 d-flex justify-content-center">
-                    <i class="fas fa-envelope" style="font-size: 24px"></i>
+                    <i class="fas fa-envelope" style="font-size: 24px; color: #387a47"></i>
                     <span>jake.bilbao.04.06@gmail.com</span>
                 </div>
             </div>
