--- a/contact.html
+++ b/contact.html
@@ -52,19 +52,20 @@
             <div class="row">
                 <div class="col-sm-2 d-flex justify-content-center">
                     <i class="fab fa-linkedin" style="font-size: 24px; color: #387a47"></i>
-                    <a href="https://www.linkedin.com/in/jake-burzlaff-4b03a0b5/" target="_blank">LinkedIn</a>
+                    <a href="https://www.linkedin.com/in/jake-burzlaff-4b03a0b5/" target="_blank"
+                        style="color: #fcf9f9">LinkedIn</a>
                 </div>
                 <div class="col-sm-2 d-flex justify-content-center">
                     <i class="fab fa-github" style="font-size: 24px; color: #387a47"></i>
-                    <a href="https://github.com/jburz/" target="_blank">GitHub</a>
+                    <a href="https://github.com/jburz/" target="_blank" style="color: #fcf9f9">GitHub</a>
                 </div>
                 <div class="col-sm-3 d-flex justify-content-center">
                     <i class="fas fa-phone" style="font-size: 24px; color: #387a47"></i>
-                    <span>(630) 809-8335</span>
+                    <span style="color: #fcf9f9">(630) 809-8335</span>
                 </div>
                 <div class="col-sm-3 d-flex justify-content-center">
                     <i class="fas fa-envelope" style="font-size: 24px; color: #387a47"></i>
-                    <span>jake.bilbao.04.06@gmail.com</span>
+                    <span style="color: #fcf9f9">jake.bilbao.04.06@gmail.com</span>
                 </div>
             </div>
         </main>
