--- a/index.html
+++ b/index.html
@@ -66,6 +66,9 @@
                             all at once, I have hit the dream!
                         </p>
                     </div>
+                    <a href="./assets/Resume.pdf" class="btn btn-sm btn-style">View Resume</a>
+                    <div>
+                    </div>
                 </div>
             </div>
         </main>
